Mar 05, 2014 - chris ---------------------------------------------------
o Committed Transactions are no longer flushed immediately, but can be
	buffered and flushed together with other committed Transactions

Mar 04, 2014 - chris ---------------------------------------------------
o Removed the txn parameter from ham_db_check_integrity()

Feb 26, 2014 - chris ---------------------------------------------------
o Fixed a freelist bug; the persistent freelist state was sometimes not
	correctly initialized

Feb 25, 2014 - chris ---------------------------------------------------
o ham_db_check_integrity() has an additional parameter for flags; currently
	supported is HAM_PRINT_GRAPH, which prints a btree to a graph file for
	"dot". Only if HAM_DEBUG is enabled.

Feb 21, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.6

Feb 21, 2014 - chris ---------------------------------------------------
o issue #30: very small cache sizes cause file size explosion

Feb 20, 2014 - chris ---------------------------------------------------
o The log was merged with the journal; the journal now stores
	redo-information for physical changes. To improve performance, the journal
	buffers its data before flushing to disk.

Feb 08, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.5

Feb 06, 2014 - chris ---------------------------------------------------
o Bugfix: cache purges always purged one page only; now purges as many as
	required

Feb 05, 2014 - chris ---------------------------------------------------
o Fixed several regressions that crept in when 2.1.4 was released

Feb 04, 2014 - chris ---------------------------------------------------
o Bugfix: if a Database is closed in an in-memory Environment, the Database
	name was still occupied and the Database could not be re-created.

Jan 28, 2014 - chris ---------------------------------------------------