@@ -96,6 +96,7 @@ HamsterDatabase::do_create_env()
     flags |= m_config->use_transactions ? HAM_ENABLE_TRANSACTIONS : 0;
     flags |= m_config->use_fsync ? HAM_ENABLE_FSYNC : 0;
     flags |= m_config->flush_txn_immediately ? HAM_FLUSH_WHEN_COMMITTED : 0;
+    flags |= m_config->disable_recovery ? HAM_DISABLE_RECOVERY : 0;
 
     boost::filesystem::remove("test-ham.db");
 
@@ -162,6 +163,7 @@ HamsterDatabase::do_open_env()
     flags |= m_config->use_transactions ? HAM_ENABLE_TRANSACTIONS : 0;
     flags |= m_config->use_fsync ? HAM_ENABLE_FSYNC : 0;
     flags |= m_config->flush_txn_immediately ? HAM_FLUSH_WHEN_COMMITTED : 0;
+    flags |= m_config->disable_recovery ? HAM_DISABLE_RECOVERY : 0;
 
     st = ham_env_open(&ms_env, "test-ham.db", flags, &params[0]);
     if (st) {
